# SharingIsCaring

./: FileServerV2.cabal  README.md
DirectoryServer/: DirectoryServer.cabal  README.md  client_session_key.aes  test.db3  tester0.db3
DirectoryServer/.stack-work/install/1e01afab/flag-cache/: DirectoryServer-0.1.0.0-20UTl81WA6M8kuvgth9u3N  DirectoryServer-0.1.0.0-5koyV8qwMH1ElmHEfnSBHp  DirectoryServer-0.1.0.0-GGjLyrMJzlZ266JlofVYF2  MyApis-0.1.0.0-IYIVOId0bsL3GH6SZE3VHj  aeson-1.1.2.0-IYYaF432Hu8HQKp7no3ap1  aeson-compat-0.3.6-3jcbNvweiFI2p0UZCMZBcC  aeson-pretty-0.8.5-5mYVbvFiTi7CCeIahcTyxL  ansi-terminal-0.6.3.1-CdiTOvx5ZEQ2RerUYIP05k  ansi-wl-pprint-0.6.7.3-KaeMs0wRg3QC5nOlh5MJx3  appar-0.1.4-DGWHHt2WRn9FI49prcwO9  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-3ql4hcH9pGfBAlE21oqFTQ  attoparsec-iso8601-1.0.0.0-5krMHmbflz8EYj7W9e0kqT  auto-update-0.1.4-EmUvNdmhEju51bHrtaEMpz  base-compat-0.9.3-m1TEyTenyr5nJN40TpHVj  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  basement-0.0.4-7rMFzW0TOqA3p16MKBn0rj  blaze-builder-0.4.0.2-LxClHUTiKUUAxWtvJ5Oeoy  blaze-html-0.9.0.1-GQ0yZtPYt2i2KdgnUEOA8p  blaze-markup-0.8.0.0-GsxkVbRgODkgUQDmmDVob  byteable-0.1.1-2lU1pexQSLj1KbNO17UifQ  byteorder-1.0.4-9NlNHkBVdo7F1prFVKrkcH  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  cabal-doctest-1.0.4-6IFrPlwYdJyGJFMg5xyMZs  case-insensitive-1.2.0.10-1D5OUKQ7UrJ7IpOe0di4Un  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  (+110 more)
DirectoryServer/app/: Main.hs
DirectoryServer/src/: Api.hs  Config.hs  Database.hs  DirectoryServer.hs  Lib.hs  Server.hs  Types.hs
FileServer/: stack.yaml  (+1 more)
(+230 files in other folders)
